--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,4 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: teal;
+}
+input{
+	border: 5px solid white; 
+	padding: 15px;
+    background: rgba(255,255,255,0.5);
+    margin: 0 0 10px 0;
 }
