--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,14 +94,23 @@ nav a:hover {
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgba(80, 151, 190, 0.52);
   height: 150px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  position: relative;
+  top: -40px;
+}
+.App-title h1{
+  font-size: 3.5em;
+  margin-bottom: 0;
+}
+.App-title h3{
+  font-size: 2em;
+  margin-top: 0;
 }
 
 .App-intro {
