--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: teal;
+  font-family: 'Indie Flower', cursive;
+  background-color: #9BD5D8;
+
 }
 input{
 	border: 5px solid white; 
 	padding: 15px;
     background: rgba(255,255,255,0.5);
     margin: 0 0 10px 0;
+}
+h1{
+	font-size: 54px;
 }
